2008-03-07  John W. Eaton  <jwe@octave.org>

	* test_logical-wfi-t.m, test_logical-wfi-f.m: Update tests for
	logical indexing bug fix.

2008-03-06  John W. Eaton  <jwe@octave.org>

	* test_eval.m, test_diffeq.m, test_quad.m, test_signal.m:
	Delete files with no tests.

2008-02-25  Ben Abbott <bpabbott@mac.com>

	* test_eval-catch.m, test_io.m, test_try.m: Use cstrcat instead of
	strcat.

2008-02-22  David Bateman  <dbateman@free.fr>

	* build_sparse_tests.sh: Replaced removed sparse functions like
	spdiag with their generic names. Fix lu tests for modified
	syntax. Test vector and scaling or LU and chol functions. 
	* test_linalg.m: Change error message of failing chol/lu test.

2008-02-19  David Bateman  <dbateman@free.fr>

	* build_sparse_tests.sh: Replaced removed spars functions like
	spmin, with their  generic names.

2008-01-22  John W. Eaton  <jwe@octave.org>

	* test_poly.m, test_set.m, test_stats.m: Delete files with no tests.

2008-01-22  Thomas Weber  <thomas.weber.mail@gmail.com>

	* test_linalg.m, test_matrix.m, test_number.m, test_poly.m,
	test_signal.m, test_stats.m, test_string.m, test_system.m: 
	Move tests to individual source files.

2008-01-15  Thomas Weber  <thomas.weber.mail@gmail.com>

	* test_arith.m: Move tests to source files.

2008-01-15  John W. Eaton  <jwe@octave.org>

	* test_audio.m, test_control.m, test_image.m, test_optim.m,
	test_plot.m, test_unix.m: Delete files with no tests.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-18  David Bateman  <dbateman@free.fr>

	* build_sparse_tests.sh: Add tests for indexing like a([1,1],:),
	a(:,[1,1]) and sparse(42)([1,1]).

2007-12-11  David Bateman  <dbateman@free.fr>

	* build_sparse_tests.sh: Drop argument to Fsparse to force mutation.
	* test_range.m: Ditto.

2007-12-10  John W. Eaton  <jwe@octave.org>

	* test_nonlin.m: Delete.

2007-12-03  David Bateman  <dbateman@free.fr>

	* fntests.m: Also count the skipped tests.